--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,31 @@
   <name>proyecto-escuela</name>
   <url>http://maven.apache.org</url>
   
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.0.0</version>
+      <configuration>
+        <mainClass>com.escuela.Main</mainClass>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
 
   <dependencies>
-    <!-- Dependencia para MySQL Connector -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
     </dependency>
 
-    <!-- Dependencia para JUnit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
